# assignments

./: .gitignore  create_report_docx.py
ctc_assignment/: .gitignore  README.md  dataset.py  evaluate.py  model.py  pyproject.toml  train.py  utils.py
kws_assignment/: .gitignore  README.md  analyze_test.py  main.py  pyproject.toml  train.py
kws_assignment/configs/: dscnn_xlarge.yaml
kws_assignment/scripts/: prepare_gsc.py
kws_assignment/src/: augment.py  dataset.py  features.py
kws_assignment/src/models/: dscnn.py
streaming_asr/: README.md  streaming_asr.py
