[project]
name = "kws-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pyyaml>=6.0.3",
    "scipy>=1.15.3",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "tqdm>=4.67.3",
    "wandb>=0.25.1",
]
